--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="css/navbar-fixed.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <title>LoopLAB</title>
 </head>
 
@@ -20,16 +20,16 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-md fixed-top">
             <div class="container">
-                <a href="#" class="navbar-brand"> LoopLAB </a>
+                <a href="#home" class="navbar-brand"> LoopLAB </a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active"> <a class="nav-link" href="#home">home</a></li>
+                        <li class="nav-item"> <a class="nav-link" href="#home">home</a></li>
                         <li class="nav-item"> <a class="nav-link" href="#explore">explore</a></li>
-                        <li class="nav-item"> <a class="nav-link" href="#">create</a></li>
-                        <li class="nav-item"> <a class="nav-link" href="#">share</a></li>
+                        <li class="nav-item"> <a class="nav-link" href="#create">create</a></li>
+                        <li class="nav-item"> <a class="nav-link" href="#share">share</a></li>
                     </ul>
                 </div>
             </div>
@@ -134,39 +134,188 @@
         </div>
         <div class="explore_main bg-light py-5 text-dark">
             <div class="container">
-                <div class="row my-4">
-                    <div class="col-md-12 col-lg-6 my-3">
+                <div class="row mt-4">
+                    <div class="col-md-12 col-lg-6 my-2">
                         <img src="img/explore.jpeg" class="img-fluid rounded" alt="explore">
                     </div>
                     <div class="col-md-12 col-lg-6">
-                        <h3 class="display-4">Explore Learn & Connect</h3>
+                        <h3>Explore Learn & Connect</h3>
                         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis aliquam sed cum,
                             sunt, quia dicta? Animi, commodi, neque incidunt non atque aliquid voluptates nostrum,
                             inventore tenetur asperiores a necessitatibus ut.</p>
-                            <div class="d-flex flex-row">
-                                <div class="p-4 align-self-start">
-                                    <i class="fa fa-check mt-2"></i>
-                                </div>
-                                <div>
-                                    <p class="lead p-4 align-self-start">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas officiis iste itaque? </p>
-                                </div>
+                        <div class="d-flex flex-row">
+                            <div class="p-4 align-self-start">
+                                <i class="fa fa-check mt-2"></i>
                             </div>
-                            <div class="d-flex flex-row">
-                                <div class="p-4 align-self-start">
-                                    <i class="fa fa-check mt-2"></i>
-                                </div>
-                                <div>
-                                    <p class="lead p-4 align-self-start">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas officiis iste itaque? </p>
-                                </div>
+                            <div>
+                                <p class="lead p-4 align-self-start">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Voluptas officiis iste itaque? </p>
                             </div>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="p-4 align-self-start">
+                                <i class="fa fa-check mt-2"></i>
+                            </div>
+                            <div>
+                                <p class="lead p-4 align-self-start">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Voluptas officiis iste itaque? </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- EXPLORE SECTION END -->
+    <!-- CREATE SECTION START -->
+    <section id="create">
+        <div class="create_head text-center py-4 bg-primary">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="display-4">Create</h2>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea nulla ducimus
+                            veniam repellat nostrum, placeat aperiam maiores! Dicta, voluptatum molestiae.</p>
+                        <a href="#" class="btn btn-outline-light">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="create_main bg-light py-5 text-light bg-dark">
+            <div class="container">
+                <div class="row mt-4">
+                    <div class="col-md-12 col-lg-6 mt-4">
+                        <h3>Create Your Passion</h3>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis aliquam sed cum,
+                            sunt, quia dicta? Animi, commodi, neque incidunt non atque aliquid voluptates nostrum,
+                            inventore tenetur asperiores a necessitatibus ut.</p>
+                        <div class="d-flex flex-row">
+                            <div class="p-4 align-self-start">
+                                <i class="fa fa-check mt-2"></i>
+                            </div>
+                            <div>
+                                <p class="lead p-4 align-self-start">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Voluptas officiis iste itaque? </p>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="p-4 align-self-start">
+                                <i class="fa fa-check mt-2"></i>
+                            </div>
+                            <div>
+                                <p class="lead p-4 align-self-start">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Voluptas officiis iste itaque? </p>
+                            </div>
+                        </div>
 
+                    </div>
+                    <div class="col-md-12 col-lg-6 my-4">
+                        <img src="img/create.jpeg" class="img-fluid rounded" alt="explore">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- CREATE SECTION END -->
 
+    <!-- SHARE SECTION START -->
+    <section id="share" class="share">
+        <div class="share_head text-center py-4 bg-primary">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="display-4">Share</h2>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea nulla ducimus
+                            veniam repellat nostrum, placeat aperiam maiores! Dicta, voluptatum molestiae.</p>
+                        <a href="#" class="btn btn-outline-light">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="share_main bg-light py-5 text-dark">
+            <div class="container">
+                <div class="row mt-4">
+                    <div class="col-md-12 col-lg-6 my-2">
+                        <img src="img/share.jpeg" class="img-fluid rounded" alt="explore">
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <h3>Share what you create</h3>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis aliquam sed cum,
+                            sunt, quia dicta? Animi, commodi, neque incidunt non atque aliquid voluptates nostrum,
+                            inventore tenetur asperiores a necessitatibus ut.</p>
+                        <div class="d-flex flex-row">
+                            <div class="p-4 align-self-start">
+                                <i class="fa fa-check mt-2"></i>
+                            </div>
+                            <div>
+                                <p class="lead p-4 align-self-start">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Voluptas officiis iste itaque? </p>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="p-4 align-self-start">
+                                <i class="fa fa-check mt-2"></i>
+                            </div>
+                            <div>
+                                <p class="lead p-4 align-self-start">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Voluptas officiis iste itaque? </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- SHARE SECTION END -->
+
+    <!-- FOOTER SECTION START -->
+    <footer class="text-center py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>LoopLAB</h2>
+                    <p>Copyright &copy; 2020</p>
+                    <span> Designed by: <a href="http://facebook.com/razzakromy" target="_blank"
+                            class="text-warning ml-2">Romy</a> </span>
+                            <br>
+                            <button type="button" class="btn btn-primary mt-4" data-toggle="modal"
+                                data-target="#contactModal">Contact Us</button>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- FOOTER SECTION END -->
+    <!-- CONTACT US MODAL START -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="contactModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content bg-dark">
+                <div class="modal-header">
+                    <h5 class="modal-title">Contact Us</h5>
+                    <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="https://formspree.io/razzakromy.rr@gmail.com" method="POST">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input name="Name" type="text" id="name" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input name="Email" type="email" id="email" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea class="form-control" id="message" name="Message"> </textarea>
+                        </div>
+                        <input type="submit" value="Send" class="btn btn-primary">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- CONTACT US MODAL END -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
