--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                             <div class="card bg-primary text-center card_form">
                                 <div class="card-body">
-                                    <h3>sign up today</h3>
+                                    <h3>Sign Up Today</h3>
                                     <p>please fill up this form to register</p>
                                     <form action="">
                                         <div class="form-group">
