--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form action="https://formspree.io/razzakromy.rr@gmail.com" method="POST">
+                    <form action="https://formspree.io/f/xzbkjbqp" method="POST">
                         <div class="form-group">
                             <label for="name">Name</label>
                             <input name="Name" type="text" id="name" class="form-control">
