--- a/index.html
+++ b/index.html
@@ -296,14 +296,14 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form action="https://formspree.io/f/xzbkjbqp" method="POST">
+                    <form action="https://formspree.io/f/xzbkjbqp" method="post">
                         <div class="form-group">
                             <label for="name">Name</label>
-                            <input name="Name" type="text" id="name" class="form-control">
+                            <input type="name" name="Name" type="text" id="name" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input name="_replyto" type="email" id="email" class="form-control">
+                            <input type="email" name="_replyto" type="email" id="email" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
