--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" name="_replyto" type="email" id="email" class="form-control">
+                            <input type="email" name="Email" type="email" id="email" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
